correct sing restrictions presentation

--- a/index-speaker.html
+++ b/index-speaker.html
@@ -937,13 +937,12 @@ B_{0.31}&amp;B_{0.32}&amp;B_{0.33}
 \end{align}\]</span></p>
 <h3 id="system-with-sign-restrictions.">system with sign restrictions.</h3>
 <p><span class="math display">\[\begin{align}
+\begin{bmatrix}ttr_t \\ gs_t \\ gdp_t \end{bmatrix} &amp;= \dots +
 \begin{bmatrix}
 +&amp;*&amp;+\\
 *&amp;+&amp;*\\
 *&amp;*&amp;+
-\end{bmatrix}
-\begin{bmatrix}ttr_t \\ gs_t \\ gdp_t \end{bmatrix} &amp;= \dots +
-\begin{bmatrix} u_t^{ttr} \\ u_t^{gs} \\ u_t^{gdp}\end{bmatrix}
+\end{bmatrix}\begin{bmatrix} u_t^{ttr} \\ u_t^{gs} \\ u_t^{gdp}\end{bmatrix}
 \end{align}\]</span></p>
 </section>
 <section id="specify-and-estimate-the-svar" class="slide level2">
