--- a/index-speaker.html
+++ b/index-speaker.html
@@ -650,7 +650,9 @@ y_t &amp;= \mathbf{B}^{-1}\mathbf{u}_t + \mathbf{A}_1 y_{t-1}\\
 <div class="footer">
 <p><a href="https://bsvars.org">bsvars.org</a></p>
 </div>
+<p><span class="math display">\[ \]</span></p>
 <p>… are a way to quantify the relative importance of the shocks in explaining the forecast error variance of the variables in the system.</p>
+<p><span class="math display">\[ \]</span></p>
 <h4 id="forecast-error-covariance-matrix.">forecast error covariance matrix.</h4>
 <p><span class="math display">\[\begin{align}
 \mathbf\Sigma_{T+h} &amp;=
@@ -659,14 +661,23 @@ y_t &amp;= \mathbf{B}^{-1}\mathbf{u}_t + \mathbf{A}_1 y_{t-1}\\
 <h4 id="forecast-error-variance.">forecast error variance.</h4>
 <p>For the first variable, at the forecast horizon <span class="math inline">\(h\)</span>, for <span class="math inline">\(N=2\)</span>:</p>
 <p><span class="math display">\[\begin{align}
-\mathbf\Sigma_{T+h[11]} &amp;=
-\mathbf{\Theta}_{h[11]}^2 \sigma^2_{1.T+h} + \mathbf{\Theta}_{h[12]}^2 \sigma^2_{2.T+h}
+\sum_{i=0}^{h-1}\mathbf\Sigma_{T+i[11]} &amp;= \sum_{i=0}^{h-1}
+\mathbf{\Theta}_{i[11]}^2 \sigma^2_{1.T+i} + \mathbf{\Theta}_{i[12]}^2 \sigma^2_{2.T+i}
 \end{align}\]</span></p>
+</section>
+<section id="forecast-error-variance-decompositions-1" class="slide level2">
+<h2>forecast error variance decompositions</h2>
+<div class="footer">
+<p><a href="https://bsvars.org">bsvars.org</a></p>
+</div>
+<p><span class="math display">\[ \]</span></p>
+<p>… are a way to quantify the relative importance of the shocks in explaining the forecast error variance of the variables in the system.</p>
+<p><span class="math display">\[ \]</span></p>
 <h4 id="forecast-error-variance-decomposition.">forecast error variance decomposition.</h4>
 <p>First shock’s contribution to the forecast error variance of the first variable:</p>
 <p><span class="math display">\[\begin{align}
-\mathbf\Sigma_{T+h[11]} &amp;= \frac{\mathbf{\Theta}_{h[11]}^2 \sigma^2_{1.T+h}}{
-\mathbf{\Theta}_{h[11]}^2 \sigma^2_{1.T+h} + \mathbf{\Theta}_{h[12]}^2 \sigma^2_{2.T+h}}
+FEVD_{T+h[11]} &amp;= \sum_{i=0}^{h-1}\frac{\mathbf{\Theta}_{i[11]}^2 \sigma^2_{1.T+i}}{
+\mathbf{\Theta}_{i[11]}^2 \sigma^2_{1.T+i} + \mathbf{\Theta}_{i[12]}^2 \sigma^2_{2.T+i}}
 \end{align}\]</span></p>
 </section>
 <section id="bsvars-and-bsvarsigns-features-1" class="slide level2" data-background-color="#001D31">
@@ -1003,7 +1014,7 @@ bsvars: Bayesian Structural Vector Autoregressions|
 </div>
 </div>
 </section>
-<section id="forecast-error-variance-decompositions-1" class="slide level2">
+<section id="forecast-error-variance-decompositions-2" class="slide level2">
 <h2>forecast error variance decompositions</h2>
 <p><img data-src="bsvars.png" class="absolute" style="top: -20px; right: 10px; width: 120px; "></p>
 <p><span class="math display">\[\begin{align}
@@ -1093,7 +1104,7 @@ bsvars: Bayesian Structural Vector Autoregressions|
 </div>
 </div>
 </section>
-<section id="forecast-error-variance-decompositions-2" class="slide level2">
+<section id="forecast-error-variance-decompositions-3" class="slide level2">
 <h2>forecast error variance decompositions</h2>
 <p><img data-src="bsvarSIGNs.png" class="absolute" style="top: -20px; right: 10px; width: 120px; "></p>
 <p><span class="math display">\[\begin{align}
